# mat_know_base

./: .env.example  .gitignore  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yaml  pyproject.toml  roadmap.md
alembic/: env.py
alembic/versions/: 0001_projection_review_redesign.py  0005_frame_agent_annotations.py  001_initial_schema.py  002_add_processed_assets.py  003_add_extraction_support.py  003_stub.py  004_add_knowledge_base_frames.py
examples/: basic_usage.py
examples/spaces/: biomineralization_templates.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: assistant.ts  client.ts  feedback.ts  frames.ts  graph.ts  jobs.ts  projections.ts  projects.ts  spaces.ts  upload.ts
frontend/src/components/: JobProgress.tsx  Layout.tsx  StatusBadge.tsx
frontend/src/hooks/: useJobPolling.ts
frontend/src/pages/: AssistantPage.tsx  FeedbackPage.tsx  FramesPage.tsx  GraphPage.tsx  ProjectionsPage.tsx  ProjectsPage.tsx
frontend/src/store/: chatStore.ts  uiStore.ts
frontend/src/types/: index.ts
scripts/: pack_data.sh  unpack_data.sh
src/mkb/: __init__.py  __main__.py  api.py  cli.py  config.py  knowledge_graph.py
src/mkb/agents/: __init__.py  _utils.py  clarification.py  dev_agent.py  extraction.py  (+10 more)
tests/: test_agent_tool_robustness.py  test_background_progress.py  test_config.py  test_db_engine.py  test_debug_utils.py  test_knowledge_frame_tools.py  test_knowledge_graph_tools.py  test_projection_utils.py  test_projects_upload_grouping.py
(+52 files in other folders)
