[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mat-know-base"
version = "0.1.0"
description = "Scientific knowledge extraction and knowledge graph construction"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "boto3>=1.34",
    "python-magic>=0.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "python-docx>=1.1",
    "pillow>=10.0",
    "openpyxl>=3.1",
    "pytesseract>=0.3",
    "mineru>=2.0",
    "google-adk",
    "litellm>=1.75.5",
    "streamlit>=1.38",
    "streamlit-agraph>=0.0.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "ipython",
]

[project.scripts]
mkb = "mkb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
